kubernetes/apps/calibre-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/part-of: azalea-homelab
