kubernetes/apps/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: calibre-web
