kubernetes/apps/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  namespace: calibre-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: calibre.pirackr.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 80
